fix: loading screen not covering on mobile

--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -2,7 +2,7 @@
     z-index: 2;
     position: absolute;
     width: 100%;
-    height: var(--window-height);
+    height: 100%;
     background-color: white;
 }
 
